Fix T38720: Clear preview range operator missing notifier to redraw timeline.